--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from themes.3rdwavemedia.com/sphere/bs5/ by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 03 Aug 2025 07:59:25 GMT -->
-<!-- Added by HTTrack -->
 <head>
-    <title>Sphere - Bootstrap 5 Portfolio/Resume/CV Template</title>
+    <title>GAJENDRA NAGLE Portfolio</title>
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
     <!-- Meta -->
     <meta charset="utf-8">
@@ -15,10 +13,8 @@
     <link rel="shortcut icon" href="favicon.ico">
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,400italic,300italic,300,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
     <!-- FontAwesome JS -->
-    <!--<script defer src="assets/plugins/fontawesome/js/all.js"></script>-->
     <script src="assets/js/all.js"></script>
     <!-- Global CSS -->
-    <!--<link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">-->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
     <!-- Theme CSS -->
     <link href="assets/css/theme-1.css" rel="stylesheet" />
@@ -34,14 +30,13 @@
                    target="_blank">
                     <i class="fas fa-paper-plane" aria-hidden="true"></i> Hire Me
                 </a>
-                <a class="btn" href="assets/pdf/GajendraNagle.pdf"><i class="fas fa-download" aria-hidden="true"></i> Download And View My Resume</a>
+                <a class="btn"  target="_blank" href="assets/pdf/GajendraNagle.pdf"><i class="fas fa-download" aria-hidden="true"></i> Download And View My Resume</a>
             </div><!--//actions-->
             <ul class="social list-inline">
-                <li class="list-inline-item"><a href="https://www.linkedin.com/in/gajendra-nagle-a3a6351b7"><i class="fa-brands fa-linkedin-in" aria-hidden="true"></i></a></li>
-                <!--<li class="list-inline-item"><a href="#"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a></li>-->
-                <li class="list-inline-item"><a href="https://github.com/GajendNagle"><i class="fa-brands fa-github-alt" aria-hidden="true"></i></a></li>
-                <li class="list-inline-item"><a href="https://www.instagram.com/gajendraamla/?igsh=ZzNyYW1iOGF3djVp"><i class="fa-brands fa-instagram" aria-hidden="true"></i></a></li>
-                <li class="list-inline-item"><a href="https://teams.live.com/l/invite/FEA8Iw43aaKZjozMAE?v=g1"><i class="fa-brands fa-skype" aria-hidden="true"></i></a></li>
+                <li class="list-inline-item"><a href="https://www.linkedin.com/in/gajendra-nagle-a3a6351b7"  target="_blank"><i class="fa-brands fa-linkedin-in" aria-hidden="true"></i></a></li>
+                <li class="list-inline-item"><a href="https://github.com/GajendNagle"  target="_blank"><i class="fa-brands fa-github-alt" aria-hidden="true"></i></a></li>
+                <li class="list-inline-item"><a href="https://www.instagram.com/gajendraamla/?igsh=ZzNyYW1iOGF3djVp"  target="_blank"><i class="fa-brands fa-instagram" aria-hidden="true"></i></a></li>
+                <li class="list-inline-item"><a href="https://teams.live.com/l/invite/FEA8Iw43aaKZjozMAE?v=g1"  target="_blank"><i class="fa-brands fa-skype" aria-hidden="true"></i></a></li>
             </ul><!--//social-->
         </div><!--//top-bar-->
 
@@ -245,22 +240,22 @@
                             <img class="img-fluid" src="assets/images/portfolio-2.jpg" alt="" />
                         </figure>
                         <div class="content text-start">
-                            <h3 class="sub-title"><a href="https://github.com/GajendNagle/Billing-Management"> Billing-Management</a></h3>
+                            <h3 class="sub-title"><a href="https://github.com/GajendNagle/Billing-Management" target="_blank"> Billing-Management</a></h3>
                             <div class="meta">ASP.NET,C#,SQL SERVER,JavaScript,CSS</div>
-                            <div class="action"><a href="https://github.com/GajendNagle/Billing-Management">View on Github &rarr;</a></div>
+                            <div class="action"><a href="https://github.com/GajendNagle/Billing-Management" target="_blank">View on Github &rarr;</a></div>
                         </div>
                         <a class="link-mask" href="#"></a>
                     </div>
                 </div>
-                <div class="item backend frontend col-lg-3 col-6">
+                <div class="item backend col-lg-3 col-6">
                     <div class="item-inner">
                         <figure class="figure">
                             <img class="img-fluid" src="assets/images/portfolio-3.jpg" alt="" />
                         </figure>
                         <div class="content text-start">
-                            <h3 class="sub-title"><a href="https://github.com/GajendNagle/StudentRegistrationApps">Student Registration</a></h3>
+                            <h3 class="sub-title"><a href="https://github.com/GajendNagle/StudentRegistrationApps" target="_blank">Student Registration</a></h3>
                             <div class="meta">ASP.NET,C#,SQL SERVER,JavaScript,CSS</div>
-                            <div class="action"><a href="https://github.com/GajendNagle/StudentRegistrationApps">View on Github &rarr;</a></div>
+                            <div class="action"><a href="https://github.com/GajendNagle/StudentRegistrationApps" target="_blank">View on Github &rarr;</a></div>
                         </div>
                         <a class="link-mask" href="#"></a>
                     </div>
@@ -271,11 +266,11 @@
                             <img class="img-fluid" src="assets/images/portfolio-4.jpg" alt="" />
                         </figure>
                         <div class="content text-start"> 
-                            <h3 class="sub-title"><a href="https://github.com/GajendNagle/PostApiFromGetCityState">Postal Api From Get City & State </a></h3>
-                            <div class="meta">ReactJS</div>
-                            <div class="action"><a href="https://github.com/GajendNagle/PostApiFromGetCityState">View on Github &rarr;</a></div>
+                            <h3 class="sub-title"><a href="https://github.com/GajendNagle/PostApiFromGetCityState" target="_blank">Postal Api From Get City & State </a></h3>
+                            <div class="meta">HTML,CSS,JS</div>
+                            <div class="action"><a href="https://github.com/GajendNagle/PostApiFromGetCityState" target="_blank">View on Github &rarr;</a></div>
                         </div>
-                        <a class="link-mask" href="https://github.com/GajendNagle/PostApiFromGetCityState"></a>
+                        <a class="link-mask" href="https://github.com/GajendNagle/PostApiFromGetCityState" target="_blank"></a>
                     </div>
                 </div>
                 <div class="item backend col-lg-3 col-6">
@@ -284,11 +279,11 @@
                             <img class="img-fluid" src="assets/images/portfolio-5.jpg" alt="" />
                         </figure>
                         <div class="content text-start">
-                            <h3 class="sub-title"><a href="https://github.com/GajendNagle/Designation-Management-System-">Designation-Management</a></h3>
-                            <div class="meta">Python</div>
-                            <div class="action"><a href="https://github.com/GajendNagle/Designation-Management-System-">View on Github &rarr;</a></div>
+                            <h3 class="sub-title"><a href="https://github.com/GajendNagle/Designation-Management-System-" target="_blank">Designation-Management</a></h3>
+                            <div class="meta">ASP.NET,C#,SQL SERVER,JavaScript,CSS</div>
+                            <div class="action"><a href="https://github.com/GajendNagle/Designation-Management-System-" target="_blank">View on Github &rarr;</a></div>
                         </div>
-                        <a class="link-mask" href="https://github.com/GajendNagle/Designation-Management-System-"></a>
+                        <a class="link-mask" href="https://github.com/GajendNagle/Designation-Management-System-" target="_blank"></a>
                     </div>
                 </div>
             </div><!--//item-wrapper-->
@@ -318,11 +313,10 @@
                     </ul>
                     <p>Drop me a line at <a href="mailto:gajedraamla55@gmail.com">gajedraamla55@gmail.com</a> or call me at <a href="tel:+919098366859">+919098366859</a></p>
                     <ul class="social list-inline">
-                        <li class="list-inline-item"><a href="https://www.linkedin.com/in/gajendra-nagle-a3a6351b7"><i class="fa-brands fa-linkedin-in" aria-hidden="true"></i></a></li>
-                        <li class="list-inline-item"><!--<a href="https://github.com/GajendNagle"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a>--></li>
-                        <li class="list-inline-item"><a href="https://www.instagram.com/gajendraamla/?igsh=ZzNyYW1iOGF3djVp"><i class="fa-brands fa-instagram" aria-hidden="true"></i></a></li>
-                        <li class="list-inline-item"><a href="https://github.com/GajendNagle"><i class="fa-brands fa-github-alt" aria-hidden="true"></i></a></li>
-                        <li class="list-inline-item"><a href="https://teams.live.com/l/invite/FEA8Iw43aaKZjozMAE?v=g1"><i class="fa-brands fa-skype" aria-hidden="true"></i></a></li>
+                        <li class="list-inline-item"><a  target="_blank" href="https://www.linkedin.com/in/gajendra-nagle-a3a6351b7"><i class="fa-brands fa-linkedin-in" aria-hidden="true"></i></a></li>
+                        <li class="list-inline-item"><a  target="_blank" href="https://www.instagram.com/gajendraamla/?igsh=ZzNyYW1iOGF3djVp"><i class="fa-brands fa-instagram" aria-hidden="true"></i></a></li>
+                        <li class="list-inline-item"><a  target="_blank" href="https://github.com/GajendNagle"><i class="fa-brands fa-github-alt" aria-hidden="true"></i></a></li>
+                        <li class="list-inline-item"><a  target="_blank" href="https://teams.live.com/l/invite/FEA8Iw43aaKZjozMAE?v=g1"><i class="fa-brands fa-skype" aria-hidden="true"></i></a></li>
                     </ul><!--//social-->
                 </div><!--//diaplog-->
             </div><!--//intro-->
