--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
     <script src="assets/js/vanilla-back-to-top.min.js"></script>
     <script src="assets/js/gumshoe.polyfills.min.js"></script>
     <script src="assets/js/main.js"></script>
-    <script src="assets/js/style-switcher.js"></script>
+    <!--<script src="assets/js/style-switcher.js"></script>-->
 
 
 </body>
