--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                             <div class="meta">ASP.NET,C#,SQL SERVER,JavaScript,CSS</div>
                             <div class="action"><a href="https://github.com/GajendNagle/Billing-Management" target="_blank">View on Github &rarr;</a></div>
                         </div>
-                        <a class="link-mask" href="#"></a>
+                        <a class="link-mask" href="https://github.com/GajendNagle/Billing-Management"  target="_blank"></a>
                     </div>
                 </div>
                 <div class="item backend col-lg-3 col-6">
@@ -257,7 +257,7 @@
                             <div class="meta">ASP.NET,C#,SQL SERVER,JavaScript,CSS</div>
                             <div class="action"><a href="https://github.com/GajendNagle/StudentRegistrationApps" target="_blank">View on Github &rarr;</a></div>
                         </div>
-                        <a class="link-mask" href="#"></a>
+                        <a class="link-mask" href="https://github.com/GajendNagle/StudentRegistrationApps"  target="_blank"></a>
                     </div>
                 </div>
                 <div class="item frontend col-lg-3 col-6">
